# CSC746-TermProject

./: CMakeLists-CUDA.txt  CMakeLists.txt  README.md  job.in  likwid-stuff.h  nbody_cpu.cpp  nbody_cpu_vectors.cpp  nbody_gpu.cu  pseudocode.cpp  sobel_cpu.cpp  sobel_cpu_omp_offload.cpp  sobel_gpu.cu
data/: cpu_FLOPS_DP_t-1.txt  cpu_FLOPS_DP_t-16.txt  cpu_FLOPS_DP_t-4.txt  gpu_prelim_runtime.txt  positions-2.csv  positions.csv  runtime_data_cpu_t-1.txt  runtime_data_cpu_t-16.txt  runtime_data_cpu_t-4.txt  runtime_data_cpu_t-64.txt  runtime_data_gpu.txt  runtime_gpu.txt
scripts/: main.py  nbody-animation.py  nbody-animator-csv.py  nbody-simulator-csv-colors.py  nbody-simulator-csv.py  nbody-simulator.py  python-prototype.py
